@@ -21,7 +21,7 @@ import java.nio.file.Path;
 import java.security.cert.TrustAnchor;
 import java.security.cert.X509Certificate;
 import java.util.Base64;
-import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 
@@ -33,8 +33,13 @@ import static org.mockito.Mockito.when;
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 class FidoMDS3MetadataBLOBIntegrationTest {
 
-    private static final X509Certificate ROOT_CERTIFICATE = CertificateUtil.generateX509Certificate(
+    private static final X509Certificate ROOT_R46_CERTIFICATE = CertificateUtil.generateX509Certificate(
             FidoMDS3MetadataBLOBIntegrationTest.class.getResourceAsStream("/integration/component/root-r46.crt"));
+    private static final X509Certificate ROOT_R3_CERTIFICATE = CertificateUtil.generateX509Certificate(
+            FidoMDS3MetadataBLOBIntegrationTest.class.getResourceAsStream("/integration/component/root-r3.crt"));
+    private static final Set<TrustAnchor> TRUST_ANCHORS = Set.of(
+            new TrustAnchor(ROOT_R46_CERTIFICATE, null),
+            new TrustAnchor(ROOT_R3_CERTIFICATE, null));
 
     private byte[] blobBytes;
 
@@ -58,7 +63,7 @@ class FidoMDS3MetadataBLOBIntegrationTest {
                 new ObjectConverter(),
                 FidoMDS3MetadataBLOBProvider.DEFAULT_BLOB_ENDPOINT,
                 httpClient,
-                Collections.singleton(new TrustAnchor(ROOT_CERTIFICATE, null)));
+                TRUST_ANCHORS);
         MetadataBLOB metadataBLOB = target.provide();
         assertThat(metadataBLOB).isNotNull();
     }
@@ -82,15 +87,22 @@ class FidoMDS3MetadataBLOBIntegrationTest {
 
     @Test
     void async_test() throws ExecutionException, InterruptedException {
-        Path rootCertificatePath = new File("src/test/resources/integration/component/root-r46.crt").toPath();
-        byte[] rootCertificateBytes = FileAsyncUtil.load(rootCertificatePath).toCompletableFuture().get();
-        X509Certificate rootCertificate = CertificateUtil.generateX509Certificate(rootCertificateBytes);
+        Path rootR46CertificatePath = new File("src/test/resources/integration/component/root-r46.crt").toPath();
+        byte[] rootR46CertificateBytes = FileAsyncUtil.load(rootR46CertificatePath).toCompletableFuture().get();
+        X509Certificate rootR46Certificate = CertificateUtil.generateX509Certificate(rootR46CertificateBytes);
+
+        Path rootR3CertificatePath = new File("src/test/resources/integration/component/root-r3.crt").toPath();
+        byte[] rootR3CertificateBytes = FileAsyncUtil.load(rootR3CertificatePath).toCompletableFuture().get();
+        X509Certificate rootR3Certificate = CertificateUtil.generateX509Certificate(rootR3CertificateBytes);
 
         Path gsgccr46evtlsca2025CrlPath = new File("src/test/resources/integration/component/gsgccr46evtlsca2025.crl").toPath();
         byte[] crlBytes = FileAsyncUtil.load(gsgccr46evtlsca2025CrlPath).toCompletableFuture().get();
 
         Path rootR46CrlPath = new File("src/test/resources/integration/component/root-r46.crl").toPath();
         byte[] rootR46CrlBytes = FileAsyncUtil.load(rootR46CrlPath).toCompletableFuture().get();
+
+        Path rootR3CrlPath = new File("src/test/resources/integration/component/root-r3.crl").toPath();
+        byte[] rootR3CrlBytes = FileAsyncUtil.load(rootR3CrlPath).toCompletableFuture().get();
 
         HttpAsyncClient httpAsyncClient = mock(HttpAsyncClient.class);
         when(httpAsyncClient.fetch(FidoMDS3MetadataBLOBAsyncProvider.DEFAULT_BLOB_ENDPOINT))
@@ -99,12 +111,16 @@ class FidoMDS3MetadataBLOBIntegrationTest {
                 .thenReturn(CompletableFuture.completedFuture(new HttpClient.Response(200, new ByteArrayInputStream(crlBytes))));
         when(httpAsyncClient.fetch("http://crl.globalsign.com/rootr46.crl"))
                 .thenReturn(CompletableFuture.completedFuture(new HttpClient.Response(200, new ByteArrayInputStream(rootR46CrlBytes))));
+        when(httpAsyncClient.fetch("http://crl.globalsign.com/root-r3.crl"))
+                .thenReturn(CompletableFuture.completedFuture(new HttpClient.Response(200, new ByteArrayInputStream(rootR3CrlBytes))));
 
         FidoMDS3MetadataBLOBAsyncProvider target = new FidoMDS3MetadataBLOBAsyncProvider(
                 new ObjectConverter(),
                 FidoMDS3MetadataBLOBAsyncProvider.DEFAULT_BLOB_ENDPOINT,
                 httpAsyncClient,
-                Collections.singleton(new TrustAnchor(rootCertificate, null)));
+                Set.of(
+                        new TrustAnchor(rootR46Certificate, null),
+                        new TrustAnchor(rootR3Certificate, null)));
         var metadataBlob = target.provide().toCompletableFuture().get();
         assertThatCode(metadataBlob::getPayload).doesNotThrowAnyException();
         assertThat(metadataBlob.getPayload().getEntries()).isNotEmpty();
